@@ -585,3 +585,4 @@ nfqws: backport from nfqws2 nl80211 ssid discovery fix for newer kernels
 73.6
 
 ipset: remove zapret-info based scripts because it's gone
+blockcheck: fix tpws test regression
